# django-video

./: .env-example  README.md  pyproject.toml
scroll_video/: apps.py  views.py
utils/: scrollvideo.py
video_api/: settings.py  urls.py
